Added enabling condition of btnCert
other fixes

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -89,7 +89,7 @@ DbStoreEditorDialog_successfull_connection = Connection to database is successfu
 
 DbStoreEditorDialog_test_connection = Test connection
 
-DbStoreEditorDialog_trust_mssql = Trust MS SQL certificate
+DbStoreEditorDialog_trust_mssql = trust MS SQL certificate
 
 DbStoreEditorDialog_use_win_auth = use Windows authentication for MS SQL Server
 
@@ -141,9 +141,9 @@ DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords i
 
 DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
-DbUpdatePrefPage_add_pre_post_script = Wrap migration with PRE/POST scripts
-
 DbStorePrefPage_xml_files = XML files
+
+DbUpdatePrefPage_add_pre_post_script = Wrap migration with PRE/POST scripts
 
 DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
@@ -664,7 +664,8 @@ PgRenameRefactoringInputPage_new_name = New Name:
 PrePostScriptPrefPage_post = Edit POST script
 
 PrePostScriptPrefPage_pre = Edit PRE script
-PrePostScriptPrefPage_pre_post_descr=There are global PRE/POST scripts and PRE/POST directories in projects
+
+PrePostScriptPrefPage_pre_post_descr = There are global PRE/POST scripts and PRE/POST directories in projects
 
 PrefListEditor_cannot_add = Cannot add item!
 
