--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -90,7 +90,7 @@ DbStoreEditorDialog_successfull_connection = \u041F\u043E\u0434\u043A\u043B\u044
 
 DbStoreEditorDialog_test_connection = \u0422\u0435\u0441\u0442 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
 
-DbStoreEditorDialog_trust_mssql = \u043F\u0440\u043E\u0432\u0435\u0440\u044F\u0442\u044C \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043A\u0430\u0442 MS SQL
+DbStoreEditorDialog_trust_mssql = \u0434\u043E\u0432\u0435\u0440\u044F\u0442\u044C \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u0443 MS SQL
 
 DbStoreEditorDialog_use_win_auth = \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C Windows \u0430\u0443\u0442\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044E \u0434\u043B\u044F \u0441\u0435\u0440\u0432\u0435\u0440\u0430 MS SQL
 
