set trust cert property only for MS connections

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -71,7 +71,7 @@ DbStoreEditorDialog_ignore_file_list = Ignored objects files
 
 DbStoreEditorDialog_learn_more = <a>Learn more</a>...
 
-DbStoreEditorDialog_ms_cert = MS SQL cert
+DbStoreEditorDialog_ms_cert = MS SQL certficiate
 
 DbStoreEditorDialog_ms_sql_database = MS SQL database
 
