--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -137,9 +137,9 @@ DbStorePrefPage_secure_storage_error_text_other = Error while saving passwords i
 
 DbStorePrefPage_secure_storage_error_title = Error while saving passwords
 
-DbUpdatePrefPage_add_pre_post_script = Wrap migration with PRE/POST scripts
-
 DbStorePrefPage_xml_files = XML files
+
+DbUpdatePrefPage_add_pre_post_script = Wrap migration with PRE/POST scripts
 
 DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
@@ -660,7 +660,8 @@ PgRenameRefactoringInputPage_new_name = New Name:
 PrePostScriptPrefPage_post = Edit POST script
 
 PrePostScriptPrefPage_pre = Edit PRE script
-PrePostScriptPrefPage_pre_post_descr=There are global PRE/POST scripts and PRE/POST directories in projects
+
+PrePostScriptPrefPage_pre_post_descr = There are global PRE/POST scripts and PRE/POST directories in projects
 
 PrefListEditor_cannot_add = Cannot add item!
 
@@ -753,14 +754,6 @@ ProjectProperties_force_unix_newlines_desc = Force Unix-style newline characters
 ProjectProperties_posix_is_used_warn = Warning:\nPostgreSQL treats UTC+XX timezone format using POSIX standard. \nIn the names of POSIX time zone names, positive offsets are used \nfor locations west of Greenwich.
 
 ProjectProperties_use_global_ignore_list = Use global ignore list
-
-ProjectUpdater_error_backup_restore = Error while restoring backups after update error! Please repair your project manually before continuing!
-
-ProjectUpdater_error_no_tempdir = Couldn''t create temp directory for project update! {0}
-
-ProjectUpdater_error_update = Error while updating project: {0}
-
-ProjectUpdater_old_db_null = Old database should not be null for partial update.
 
 QuickUpdate_danger = Migration contains dangerous statements that may modify data. Use project editor instead.
 
