Added  option for generation Constraint not valid code for no partitioned table

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1,4 +1,6 @@
 
+ApplyCustomDialog_constraint_not_valid = Print CONSTRAINT NOT VALID
+
 CodeFilter_search_by_code = Filter by object's SQL code:
 
 CommitDialog_privileges_must_be_saved = Only privilege and owners of database objects overrides can be saved due to library object modification!
