Added column display in pg Dependencies window

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -165,6 +165,8 @@ DepcyGraphView_project = Project
 
 DepcyGraphView_remote = Remote
 
+DepcyGraphView_show_columns = Show columns
+
 DependencyProperties_add_database = Add database
 
 DependencyProperties_add_directory = Add directory
