--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -166,6 +166,8 @@ DepcyGraphView_project = \u041F\u0440\u043E\u0435\u043A\u0442
 
 DepcyGraphView_remote = \u0411\u0414
 
+DepcyGraphView_show_columns = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043A\u043E\u043B\u043E\u043D\u043A\u0438
+
 DependencyProperties_add_database = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0431\u0430\u0437\u0443 \u0434\u0430\u043D\u043D\u044B\u0445
 
 DependencyProperties_add_directory = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u0438\u0440\u0435\u043A\u0442\u043E\u0440\u0438\u044E
