new classes added, made additions to bundle.properties

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -12,6 +12,7 @@ category.name.keeperCategory     = pgCodeKeeper
 category.name.keeperImportWizard = pgCodeKeeper
 category.name.keeperNewWizard    = pgCodeKeeper
 
+command.commandname.AddComment       = Add/change comment
 command.commandname.AddDepcy         = Add depcy
 command.commandname.CancelDdl        = Cancel execution
 command.commandname.CommitProject    = Apply to project
