new comment is now being saved by being added to editor's text field

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1,4 +1,6 @@
-AddCommentWizardPage_new_page = Add/change comment
+AddCommentDialogMessage = Type comment text
+
+AddCommentDialogTitle = Add/change comment
 
 ApplyCustomDialog_constraint_not_valid = Print CONSTRAINT NOT VALID
 
