fixed incorrect logic of changing of existing comment

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1,6 +1,11 @@
+
 AddCommentDialogMessage = Type comment text
 
 AddCommentDialogTitle = Add/change comment
+
+AddCommentSelectionErrorDialogMessage = Selected area is empty or selected object is not yet existing. Try to select other area or save the file so objects are considered existing.
+
+AddCommentSelectionErrorDialogTitle = Selection error
 
 ApplyCustomDialog_constraint_not_valid = Print CONSTRAINT NOT VALID
 
