--- a/ru.taximaxim.codekeeper.cli/OSGI-INF/l10n/bundle_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.cli/OSGI-INF/l10n/bundle_ru_RU.properties
@@ -2,4 +2,4 @@
 
 Bundle-Name = pgCodeKeeper CLI
 
-Bundle-Vendor = \u041E\u041E\u041E \u0422\u0435\u0445\u043D\u043E\u043B\u043E\u0433\u0438\u044F
+Bundle-Vendor = \u041E\u041E\u041E \u0422\u0410\u041A\u0421\u0422\u0415\u041B\u0415\u041A\u041E\u041C
