--- a/ru.taximaxim.codekeeper.mainapp/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.mainapp/OSGI-INF/l10n/bundle.properties
@@ -4,8 +4,8 @@
 
 Bundle-Name = pgCodeKeeper
 
-Bundle-Vendor = Technology, LLC
+Bundle-Vendor = TAXTELECOM, LLC
 
-product.about = pgCodeKeeper\nhttp://pgcodekeeper.org\n\nVersion: {0}, build id: {1}\n\nCopyright \u00A9 Technology, LLC\nhttp://technology45.ru/\n\nThis product includes software developed by the\nEclipse Foundation https://www.eclipse.org
+product.about = pgCodeKeeper\nhttps://pgcodekeeper.org\n\nVersion: {0}, build id: {1}\n\nCopyright \u00A9 2017-2023 \u0422\u0410\u041A\u0421\u0422\u0415\u041B\u0415\u041A\u041E\u041C, LLC\n\nThis product includes software developed by the\nEclipse Foundation https://www.eclipse.org
 product.intro = Welcome to pgCodeKeeper!
 product.name  = pgCodeKeeper
