PGCK-141 refactored dependency properties

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -171,13 +171,15 @@ DepcyGraphView_remote = Remote
 
 DepcyGraphView_show_columns = Show columns
 
-DependencyProperties_add_database = Add database
+DependencyEditorDialog_enter_path = Enter path.
+
+DependencyEditorDialog_name = Name
+
+DependencyEditorDialog_relative_path = Relative path
 
 DependencyProperties_add_directory = Add directory
 
 DependencyProperties_add_file = Add file
-
-DependencyProperties_add_uri = Add URL
 
 DependencyProperties_attention = Attention
 
@@ -189,13 +191,11 @@ DependencyProperties_clear_cache_error = Error while clearing library cache
 
 DependencyProperties_clear_libraries_cache = Clear libraries cache
 
-DependencyProperties_connection_start = Database connection string must start with 'jdbc:'
+DependencyProperties_copy_dependency = Copy dependency
 
-DependencyProperties_empty_scheme = Empty scheme unsupported
+DependencyProperties_create_new_dependency = Create new dependency
 
-DependencyProperties_enter_connection_string = Enter database connection string
-
-DependencyProperties_enter_uri = Enter URL
+DependencyProperties_edit_dependency = Edit dependency
 
 DependencyProperties_ignore_priv_warn = Ignoring privileges and owners will lead to the database setting the owners to its current user. Objects' privileges will also be defaulted using the current user.\nThis behaviour is usually undesirable. To avoid it you should save some "baseline" privileges and owners as overrides in the project. To do so, compare the project with a database where "baseline" privileges are available, and save the differences using the "override" option in the Project Update dialog.
 
@@ -689,7 +689,9 @@ ProjectEditorDiffer_lib_change_warning_message = Some of selected objects are li
 
 ProjectEditorDiffer_lib_change_warning_title = Library object change
 
-ProjectEditorDiffer_library_duplication_exception = Object overrides are present in pgCodeKeeper libraries. This is disallowed by project libraries settings.
+ProjectEditorDiffer_library_duplication_exception = Object overrides are present in pgCodeKeeper libraries. This is disallowed by project libraries settings. Change settings?
+
+ProjectEditorDiffer_library_duplication_title = Object overrides
 
 ProjectEditorDiffer_no_differences = No changes found.
 
@@ -947,8 +949,6 @@ UsageReport_Reporting_Usage = Reporting pgCodeKeeper usage
 
 add = Add
 
-add_log = Send Eclipse logs with your message
-
 calculating_diff = Calculating diff
 
 change_perspective_message = Do you want to switch to pgCodeKeeper perspective?
@@ -1113,8 +1113,6 @@ diffwizard_diffpage_target_warning = Target database schema is not selected!
 diffwizard_pagepartial_description = Select the items for updating.
 
 domain = Domain:
-
-e_mail = Your e-mail:
 
 edit = Edit
 
