PGCK-41 tooltip conflict

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -801,9 +801,9 @@ SQLEditorFormatterPrefPage_tab = Tabs
 
 SQLEditorFormatterPrefPage_whitespace = Spaces
 
-SQLEditorInformationControl_quick_fix_available = Quick fix available:
+SQLEditorInformationControl_multiple_quick_fix_available = {0} quick fixes available:
 
-SQLEditorInformationControl_quick_fix_availableSQLEditorInformationControl_quick_fixes_available = \ quick fixes available:
+SQLEditorInformationControl_quick_fix_available = Quick fix available:
 
 SQLEditorMainPage_bracket_highlighting = Bracket highlighting
 
