--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -802,9 +802,9 @@ SQLEditorFormatterPrefPage_tab = \u0422\u0430\u0431\u044B
 
 SQLEditorFormatterPrefPage_whitespace = \u041F\u0440\u043E\u0431\u0435\u043B\u044B
 
-SQLEditorInformationControl_quick_fix_available = \u0414\u043E\u0441\u0442\u0443\u043F\u043D\u043E \u0431\u044B\u0441\u0442\u0440\u043E\u0435 \u0438\u0441\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435:
+SQLEditorInformationControl_multiple_quick_fix_available = {0} \u0431\u044B\u0441\u0442\u0440\u044B\u0445 \u0438\u0441\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0439 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E:
 
-SQLEditorInformationControl_quick_fix_availableSQLEditorInformationControl_quick_fixes_available = \ \u0431\u044B\u0441\u0442\u0440\u044B\u0445 \u0438\u0441\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0439 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E:
+SQLEditorInformationControl_quick_fix_available = \u0414\u043E\u0441\u0442\u0443\u043F\u043D\u043E \u0431\u044B\u0441\u0442\u0440\u043E\u0435 \u0438\u0441\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435:
 
 SQLEditorMainPage_bracket_highlighting = \u041F\u043E\u0434\u0441\u0432\u0435\u0442\u043A\u0430 \u0441\u043A\u043E\u0431\u043E\u043A
 
