PGCK-152 add connection type

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -70,6 +70,7 @@ mergeviewer.name.sqlMergeViewer = SQL Compare
 navigator.outline.content = pgCodeKeeper SQL elements
 navigator.root.content    = pgCodeKeeper Project Root Elements
 
+page.name.connectiontype      = Connection type
 page.name.db_update_pref_page = Update DB
 page.name.dbstore             = DB Store
 page.name.dbupdate_properties = Update DB
