--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -55,6 +55,8 @@ DbStoreEditorDialog_connect_to_ms = connect to MS SQL Server
 
 DbStoreEditorDialog_connection_properties = Connection properties
 
+DbStoreEditorDialog_connection_type = Connection Type
+
 DbStoreEditorDialog_dump_browse = Browse...
 
 DbStoreEditorDialog_dump_custom_parameters = Loader custom parameters\n(available variables: {0} {1} {2} {3} {4}):
@@ -98,6 +100,8 @@ DbStoreEditorDialog_test_connection = Test connection
 DbStoreEditorDialog_trust_mssql = trust MS SQL certificate
 
 DbStoreEditorDialog_use_win_auth = use Windows authentication for MS SQL Server
+
+DbStoreEditorDialog_warning_message = Chosen type does not exist
 
 DbStoreEditorDialog_win_auth = Windows authentication
 
@@ -972,6 +976,24 @@ commitPartDescr_modifying_db_model = Modifying DB model...
 commitPartDescr_show_commit_window = Launch EGit Commit after changes apply (requires EGit plug-in)
 
 commitPartDescr_the_following_changes_be_included_in_commit = The following changes will be applied to the project:
+
+connectionTypePrefPage_color = Color
+
+connectionTypePrefPage_copyType = Copy connection type
+
+connectionTypePrefPage_createType = Create new connection type
+
+connectionTypePrefPage_editType = Edit connection type
+
+connectionTypePrefPage_export = Export
+
+connectionTypePrefPage_import = Import
+
+connectionTypePrefPage_name = Name
+
+connectionTypePrefPage_opening_error = Error while opening connection types list
+
+connectionTypePrefPage_saving_error = Error while saving connection types list
 
 copy = Copy
 
