--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -56,6 +56,8 @@ DbStoreEditorDialog_connect_to_ms = \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u
 
 DbStoreEditorDialog_connection_properties = \u0421\u0432\u043E\u0439\u0441\u0442\u0432\u0430 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
 
+DbStoreEditorDialog_connection_type = \u0422\u0438\u043F \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
+
 DbStoreEditorDialog_dump_browse = \u041E\u0431\u0437\u043E\u0440...
 
 DbStoreEditorDialog_dump_custom_parameters = \u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0435 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B \u0437\u0430\u0433\u0440\u0443\u0437\u0447\u0438\u043A\u0430\n(\u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435: {0} {1} {2} {3} {4}):
@@ -99,6 +101,8 @@ DbStoreEditorDialog_test_connection = \u0422\u0435\u0441\u0442 \u043F\u043E\u043
 DbStoreEditorDialog_trust_mssql = \u0434\u043E\u0432\u0435\u0440\u044F\u0442\u044C \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u0443 MS SQL
 
 DbStoreEditorDialog_use_win_auth = \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C Windows \u0430\u0443\u0442\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044E \u0434\u043B\u044F \u0441\u0435\u0440\u0432\u0435\u0440\u0430 MS SQL
+
+DbStoreEditorDialog_warning_message = \u0412\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0439 \u0442\u0438\u043F \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
 
 DbStoreEditorDialog_win_auth = \u0410\u0443\u0442\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F Windows
 
@@ -973,6 +977,24 @@ commitPartDescr_modifying_db_model = \u0418\u0437\u043C\u0435\u043D\u0435\u043D\
 commitPartDescr_show_commit_window = \u0417\u0430\u043F\u0443\u0441\u0442\u0438\u0442\u044C EGit Commit \u043F\u043E\u0441\u043B\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 (\u0442\u0440\u0435\u0431\u0443\u0435\u0442 \u043F\u043B\u0430\u0433\u0438\u043D\u0430 EGit)
 
 commitPartDescr_the_following_changes_be_included_in_commit = \u0421\u043B\u0435\u0434\u0443\u044E\u0449\u0438\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0431\u0443\u0434\u0443\u0442 \u043F\u0440\u0438\u043C\u0435\u043D\u0435\u043D\u044B \u043A \u043F\u0440\u043E\u0435\u043A\u0442\u0443:
+
+connectionTypePrefPage_color = \u0426\u0432\u0435\u0442
+
+connectionTypePrefPage_copyType = \u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0442\u0438\u043F \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
+
+connectionTypePrefPage_createType = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0442\u0438\u043F \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
+
+connectionTypePrefPage_editType = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0442\u0438\u043F \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
+
+connectionTypePrefPage_export = \u042D\u043A\u0441\u043F\u043E\u0440\u0442
+
+connectionTypePrefPage_import = \u0418\u043C\u043F\u043E\u0440\u0442
+
+connectionTypePrefPage_name = \u0418\u043C\u044F
+
+connectionTypePrefPage_opening_error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u043E\u0442\u043A\u0440\u044B\u0442\u0438\u0438 \u0441\u043F\u0438\u0441\u043A\u0430 \u0442\u0438\u043F\u043E\u0432 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
+
+connectionTypePrefPage_saving_error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u0441\u043F\u0438\u0441\u043A\u0430 \u0442\u0438\u043F\u043E\u0432 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
 
 copy = \u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 
