PGCK-244 show full code option

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -357,6 +357,8 @@ GeneralPrefPage_save_in_security_storage = Save passwords in Eclipse secure stor
 
 GeneralPrefPage_show_diff_errors = Show errors while getting changes
 
+GeneralPrefPage_show_full_code = Show code of all child objects when comparing
+
 GeneralPrefPage_simplify_view = Simple formatting for VIEWs when reading via JDBC (not recommended by PostgreSQL)
 
 GeneralPrefPage_time_to_clean_parser_cache = Free parser cache memory if not used for (minutes):
