--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -194,7 +194,7 @@ DependencyProperties_clear_cache_descr = \u041E\u0447\u0438\u0441\u0442\u043A\u0
 
 DependencyProperties_clear_cache_error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u043E\u0447\u0438\u0441\u0442\u043A\u0435 \u043A\u044D\u0448\u0430 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A
 
-DependencyProperties_clear_libraries_cache = \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u0438\u0442\u044C \u043A\u044D\u0448 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A
+DependencyProperties_clear_libraries_cache = \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C \u043A\u044D\u0448 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A
 
 DependencyProperties_copy_dependency = \u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0437\u0430\u0432\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u044C
 
