PGCK-106 refactored Constraint

--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -3,6 +3,10 @@
 
 Connection_DatabaseJdbcAccessError = Error while reading database schema via JDBC, error occured while processing {1}\n{0}
 
+Constraint_WarningMismatchedConstraintTypeForClusterOn = WARNING: mismatched constraint type. CLUSTER ON possible only for PRIMARY KEY and UNIQE constraints
+
+PgDiff_read_error = Error while reading pre/post script file: 
+
 ProjectUpdater_error_backup_restore = Error while restoring backups after update error! Please repair your project manually before continuing!
 
 ProjectUpdater_error_no_tempdir = Couldn''t create temp directory for project update! {0}
@@ -10,7 +14,6 @@ ProjectUpdater_error_no_tempdir = Couldn''t create temp directory for project up
 ProjectUpdater_error_update = Error while updating project: {0}
 
 ProjectUpdater_old_db_null = Old database should not be null for partial update.
-PgDiff_read_error = Error while reading pre/post script file: 
 
 # Storage
 Storage_WarningUnableToDetermineStorageType = -- WARNING: Column {0}.{1} in new table has no STORAGE set but in old table storage was set. Unable to determine STORAGE type.
