PGCK-283: Added pref to move comments to the end of the script

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -157,6 +157,8 @@ DbUpdatePrefPage_allow_data_movement = Migrate data when re-creating tables
 
 DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH statements
 
+DbUpdatePrefPage_comments_to_end = Print comments at the end of the script
+
 DbUpdatePrefPage_option_drop_object = Print DROP before CREATE statement
 
 DbUpdatePrefPage_option_if_exists = Print CREATE IF NOT EXISTS / DROP IF EXISTS
