--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -158,6 +158,8 @@ DbUpdatePrefPage_allow_data_movement = \u041C\u0438\u0433\u0440\u0438\u0440\u043
 
 DbUpdatePrefPage_alter_seq_restart_statement = \u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u044F ALTER SEQUENCE ... RESTART WITH
 
+DbUpdatePrefPage_comments_to_end = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438 \u0432 \u043A\u043E\u043D\u0446\u0435 \u0441\u043A\u0440\u0438\u043F\u0442\u0430
+
 DbUpdatePrefPage_option_drop_object = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C DROP \u043F\u0435\u0440\u0435\u0434 CREATE \u043A\u043E\u043D\u0441\u0442\u0440\u0443\u043A\u0446\u0438\u0435\u0439
 
 DbUpdatePrefPage_option_if_exists = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C CREATE IF NOT EXISTS / DROP IF EXISTS
