PGCK-308 added combo in converter and newproject

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -17,7 +17,7 @@ ConvertProject_convert_dialog_message = This project doesn't look like a pgCodeK
 
 ConvertProject_convert_dialog_title = Directories not found
 
-ConvertProject_select_type_desc = Convert to MS SQL or PostgreSQL project?
+ConvertProject_select_type_desc = Select project type in which you want to convert
 
 ConvertProject_select_type_title = Project type
 
@@ -546,6 +546,8 @@ NewProjWizard_proj_init = Project initialization
 NewProjWizard_proj_init_src = Choose a DB schema source for project initialization
 
 NewProjWizard_select_charset = Project charset:
+
+NewProjWizard_select_project_type = Select database type
 
 NewProjWizard_select_time_zone = DB connection timezone:
 
