--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -159,6 +159,8 @@ DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH s
 
 DbUpdatePrefPage_comments_to_end = Print comments at the end of the script
 
+DbUpdatePrefPage_generate_exist_do_block = Print creation of CONSTRAINT and IDENTITY in DO block (PG only)
+
 DbUpdatePrefPage_option_drop_object = Print DROP before CREATE statement
 
 DbUpdatePrefPage_option_if_exists = Print CREATE IF NOT EXISTS / DROP IF EXISTS
