--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -27,6 +27,8 @@ DbMenu_no_group = [no group]
 
 DbPropertyListEditor_already_present = Entry "{0}" is already present in the list!
 
+DbPropertyListEditor_ch_link_hint = (for ClickHouse)
+
 DbPropertyListEditor_field_name = Name:
 
 DbPropertyListEditor_field_value = Value:
@@ -35,7 +37,7 @@ DbPropertyListEditor_ms_link_hint = (for MS SQL)
 
 DbPropertyListEditor_new_property = New property
 
-DbPropertyListEditor_pg_link_hint = (for PostgreSQL)
+DbPropertyListEditor_pg_link_hint = (for PostgreSQL and Greenplum)
 
 DbPropertyListEditor_properties_hint = All properties can be viewed at:
 
@@ -159,7 +161,7 @@ DbUpdatePrefPage_alter_seq_restart_statement = ALTER SEQUENCE ... RESTART WITH s
 
 DbUpdatePrefPage_comments_to_end = Print comments at the end of the script
 
-DbUpdatePrefPage_generate_exist_do_block = Print creation of CONSTRAINT and IDENTITY in DO block (PG only)
+DbUpdatePrefPage_generate_exist_do_block = Print creation of CONSTRAINT and IDENTITY in DO block (PostgreSQL only)
 
 DbUpdatePrefPage_option_drop_object = Print DROP before CREATE statement
 
@@ -538,8 +540,6 @@ NewProjWizard_get_from_db = Query DB
 NewProjWizard_initializing_check = Initialize project using database
 
 NewProjWizard_initializing_title = Initialize project
-
-NewProjWizard_new_ms_project = New MS SQL pgCodeKeeper project
 
 NewProjWizard_not_empty_dir = Selected directory is not empty. Please, use import wizard instead.
 
