--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -28,6 +28,8 @@ DbMenu_no_group = [\u0431\u0435\u0437 \u0433\u0440\u0443\u043F\u043F\u044B]
 
 DbPropertyListEditor_already_present = \u0417\u0430\u043F\u0438\u0441\u044C "{0}" \u0443\u0436\u0435 \u043F\u0440\u0438\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u0441\u043F\u0438\u0441\u043A\u0435!
 
+DbPropertyListEditor_ch_link_hint = (\u0434\u043B\u044F ClickHouse)
+
 DbPropertyListEditor_field_name = \u0418\u043C\u044F:
 
 DbPropertyListEditor_field_value = \u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435:
@@ -36,7 +38,7 @@ DbPropertyListEditor_ms_link_hint = (\u0434\u043B\u044F MS SQL)
 
 DbPropertyListEditor_new_property = \u041D\u043E\u0432\u043E\u0435 \u0441\u0432\u043E\u0439\u0441\u0442\u0432\u043E
 
-DbPropertyListEditor_pg_link_hint = (\u0434\u043B\u044F PostgreSQL)
+DbPropertyListEditor_pg_link_hint = (\u0434\u043B\u044F PostgreSQL \u0438 Greenplum)
 
 DbPropertyListEditor_properties_hint = \u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0432\u0441\u0435 \u0441\u0432\u043E\u0439\u0441\u0442\u0432\u0430 \u043C\u043E\u0436\u043D\u043E \u043F\u043E \u0430\u0434\u0440\u0435\u0441\u0443:
 
@@ -160,7 +162,7 @@ DbUpdatePrefPage_alter_seq_restart_statement = \u0412\u044B\u0440\u0430\u0436\u0
 
 DbUpdatePrefPage_comments_to_end = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438 \u0432 \u043A\u043E\u043D\u0446\u0435 \u0441\u043A\u0440\u0438\u043F\u0442\u0430
 
-DbUpdatePrefPage_generate_exist_do_block = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u0435 CONSTRAINT \u0438 IDENTITY \u0432 DO \u0431\u043B\u043E\u043A\u0435 (\u0442\u043E\u043B\u044C\u043A\u043E \u0434\u043B\u044F PG)
+DbUpdatePrefPage_generate_exist_do_block = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u0435 CONSTRAINT \u0438 IDENTITY \u0432 DO \u0431\u043B\u043E\u043A\u0435 (\u0442\u043E\u043B\u044C\u043A\u043E \u0434\u043B\u044F PostgreSQL)
 
 DbUpdatePrefPage_option_drop_object = \u041F\u0435\u0447\u0430\u0442\u0430\u0442\u044C DROP \u043F\u0435\u0440\u0435\u0434 CREATE \u043A\u043E\u043D\u0441\u0442\u0440\u0443\u043A\u0446\u0438\u0435\u0439
 
@@ -539,8 +541,6 @@ NewProjWizard_get_from_db = \u0418\u0437 \u0411\u0414
 NewProjWizard_initializing_check = \u0418\u043D\u0438\u0446\u0438\u0430\u043B\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u043E\u0435\u043A\u0442 \u0431\u0430\u0437\u043E\u0439 \u0434\u0430\u043D\u043D\u044B\u0445
 
 NewProjWizard_initializing_title = \u0418\u043D\u0438\u0446\u0438\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F \u043F\u0440\u043E\u0435\u043A\u0442\u0430
-
-NewProjWizard_new_ms_project = \u041D\u043E\u0432\u044B\u0439 MS SQL \u043F\u0440\u043E\u0435\u043A\u0442 pgCodeKeeper
 
 NewProjWizard_not_empty_dir = \u0412\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0439 \u043A\u0430\u0442\u0430\u043B\u043E\u0433 \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u0442 \u0444\u0430\u0439\u043B\u044B. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435 \u043C\u0430\u0441\u0442\u0435\u0440 \u0438\u043C\u043F\u043E\u0440\u0442\u0430.
 
