PGCK-380 Add multi select for ignore object types

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -963,6 +963,8 @@ change_perspective_title = Switch perspective
 
 choose_dump_file_with_changes = Choose dump file with changes...
 
+clear_all = Clear All
+
 commitDialog_depcy_elements = Dependencies
 
 commitDialog_user_selected_elements = User selected elements 
