--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -964,6 +964,8 @@ change_perspective_title = \u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u043
 
 choose_dump_file_with_changes = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0444\u0430\u0439\u043B \u0434\u0430\u043C\u043F\u0430 \u0441 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F\u043C\u0438...
 
+clear_all = \u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C \u0432\u0441\u0435
+
 commitDialog_depcy_elements = \u0417\u0430\u0432\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u0438
 
 commitDialog_user_selected_elements = \u0412\u044B\u0431\u043E\u0440 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F 
