PGCK-147: Addition new feature - building graph for UI

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -5,6 +5,16 @@ AddCommentDialogTitle = Add/change comment
 
 ApplyCustomDialog_constraint_not_valid = Print CONSTRAINT NOT VALID
 
+BuildDepsGraphDialog_build_dep_graph = Build a dependency graph for 
+
+BuildDepsGraphDialog_reverse = Graph reverse
+
+BuildDepsGraphDialog_schema_source = Schema source: 
+
+BuildDepsGraphDialog_search_dep = Graph search depth
+
+BuildDepsGraphDialog_select_source_type = Select source type
+
 CodeFilter_search_by_code = Filter by object's SQL code:
 
 CommitDialog_privileges_must_be_saved = Only privilege and owners of database objects overrides can be saved due to library object modification!
@@ -257,6 +267,8 @@ DiffTableViewer_database = Database
 
 DiffTableViewer_directory = Directory
 
+DiffTableViewer_error_creating_graph = Error creating file with dependency graph
+
 DiffTableViewer_error_reading_git_history = Error reading git history
 
 DiffTableViewer_expand_all = Expand All
@@ -270,6 +282,8 @@ DiffTableViewer_get_changes = Get changes
 DiffTableViewer_get_changes_custom = Get changes with presets...
 
 DiffTableViewer_library = Library: 
+
+DiffTableViewer_menu_build_graph = Build a dependency graph
 
 DiffTableViewer_path = Path: 
 
