PGCK-390 fixed bug with transaction and concurrently

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -177,7 +177,9 @@ DbUpdatePrefPage_option_drop_object = Print DROP before CREATE statement
 
 DbUpdatePrefPage_option_if_exists = Print CREATE IF NOT EXISTS / DROP IF EXISTS
 
-DbUpdatePrefPage_print_index_with_concurrently = Print CREATE INDEX CONCURRENTLY (without locks)
+DbUpdatePrefPage_print_index_with_concurrently = Print CREATE INDEX CONCURRENTLY (without locks. Does not work with transactions in PostgreSQL)
+
+DbUpdatePrefPage_script_add_transaction = Wrap migration script with START TRANSACTION; ... COMMIT TRANSACTION;
 
 DbUpdatePrefPage_script_from_selected_objs = Create a script only from objects selected in the comparison panel
 
@@ -1060,8 +1062,6 @@ dbUpdatePrefPage_check_function_bodies = Allow PostgreSQL to validate function b
 dbUpdatePrefPage_create_script_project_directory = Create migration script files in project directory\n(enables more editor features: DB autoselection, autocomplete and others)
 
 dbUpdatePrefPage_ignore_privileges = Ignore privileges and owners of database objects
-
-dbUpdatePrefPage_script_add_transaction = Wrap migration script with START TRANSACTION; ... COMMIT TRANSACTION;
 
 dbUpdatePrefPage_script_deleting_status = Delete migration script files when closing migration editor
 
