added sonar fixes, code clean up

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -13,8 +13,6 @@ BuildDepsGraphDialog_schema_source = Schema source:
 
 BuildDepsGraphDialog_search_dep = Graph search depth
 
-BuildDepsGraphDialog_select_source_type = Select source type
-
 CodeFilter_search_by_code = Filter by object's SQL code:
 
 CommitDialog_privileges_must_be_saved = Only privilege and owners of database objects overrides can be saved due to library object modification!
@@ -1113,7 +1111,7 @@ diffTableViewer_select_child_elements = Select Child Elements
 
 diffTableViewer_unmark_selected_elements = Unmark selected elements
 
-diffTableViewer_use_java_regular_expressions_see_more = Use Java regular expressions, specification: http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html
+diffTableViewer_use_java_regular_expressions_see_more = Use Java regular expressions, specification: https://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html
 
 diffTableViewer_use_regular_expressions = RegEx
 
