--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -14,10 +14,6 @@ BuildDepsGraphDialog_schema_source = \u0418\u0441\u0442\u043E\u0447\u043D\u0438\
 
 BuildDepsGraphDialog_search_dep = \u0413\u043B\u0443\u0431\u0438\u043D\u0430 \u043F\u043E\u0438\u0441\u043A\u0430
 
-BuildDepsGraphDialog_select_obj_type = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F \u043E\u0431\u044A\u0435\u043A\u0442\u0430
-
-BuildDepsGraphDialog_select_source_type = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u0438\u043F \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A\u0430
-
 CodeFilter_search_by_code = \u0424\u0438\u043B\u044C\u0442\u0440 \u043F\u043E SQL \u043A\u043E\u0434\u0443 \u043E\u0431\u044A\u0435\u043A\u0442\u0430:
 
 CommitDialog_privileges_must_be_saved = \u0412\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0442\u043E\u043B\u044C\u043A\u043E \u043F\u0435\u0440\u0435\u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u044F \u043F\u0440\u0438\u0432\u0438\u0433\u0435\u043B\u0438\u0439 \u0438 \u0432\u043B\u0430\u0434\u0435\u043B\u044C\u0446\u0435\u0432 \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445 \u043F\u043E \u043F\u0440\u0438\u0447\u0438\u043D\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 \u0431\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A!
@@ -1116,7 +1112,7 @@ diffTableViewer_select_child_elements = \u0412\u044B\u0431\u0440\u0430\u0442\u04
 
 diffTableViewer_unmark_selected_elements = \u0421\u043D\u044F\u0442\u044C \u043F\u043E\u043C\u0435\u0442\u043A\u0443 \u0441 \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0445
 
-diffTableViewer_use_java_regular_expressions_see_more = \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u0440\u0435\u0433\u0443\u043B\u044F\u0440\u043D\u044B\u0435 \u0432\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u044F Java, \u0441\u043F\u0435\u0446\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F: http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html
+diffTableViewer_use_java_regular_expressions_see_more = \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u0440\u0435\u0433\u0443\u043B\u044F\u0440\u043D\u044B\u0435 \u0432\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u044F Java, \u0441\u043F\u0435\u0446\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F: https://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html
 
 diffTableViewer_use_regular_expressions = RegEx
 
