PGCK-417 added button swap views in diff panel

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -233,6 +233,8 @@ DependencyProperties_safe_mode_desc = Stop with an error when objects in project
 
 DependencyProperties_select_directory = Select directory
 
+DiffPaneViewer_btn_switch = Swap left and right view
+
 DiffPaneViewer_project = Project
 
 DiffPresentationPane_any_file_filter = All files
