--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -234,6 +234,8 @@ DependencyProperties_safe_mode_desc = \u041E\u0441\u0442\u0430\u043D\u0430\u0432
 
 DependencyProperties_select_directory = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0438\u0440\u0435\u043A\u0442\u043E\u0440\u0438\u044E
 
+DiffPaneViewer_btn_switch = \u041F\u043E\u043C\u0435\u043D\u044F\u0442\u044C \u043C\u0435\u0441\u0442\u0430\u043C\u0438 \u043B\u0435\u0432\u044B\u0439 \u0438 \u043F\u0440\u0430\u0432\u044B\u0439 \u0432\u0438\u0434
+
 DiffPaneViewer_project = \u041F\u0440\u043E\u0435\u043A\u0442
 
 DiffPresentationPane_any_file_filter = \u0412\u0441\u0435 \u0444\u0430\u0439\u043B\u044B
