PGCK-427 changed BuildDepsGraphDialog

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -7,11 +7,15 @@ ApplyCustomDialog_constraint_not_valid = Print CONSTRAINT NOT VALID
 
 BuildDepsGraphDialog_build_dep_graph = Build a dependency graph for 
 
-BuildDepsGraphDialog_reverse = Graph reverse
+BuildDepsGraphDialog_calls = Calls
+
+BuildDepsGraphDialog_dependencies = Dependencies
 
 BuildDepsGraphDialog_schema_source = Schema source: 
 
 BuildDepsGraphDialog_search_dep = Graph search depth
+
+BuildDepsGraphDialog_show = Show:
 
 CodeFilter_search_by_code = Filter by object's SQL code:
 
