--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -8,11 +8,15 @@ ApplyCustomDialog_constraint_not_valid = \u041F\u0435\u0447\u0430\u0442\u0430\u0
 
 BuildDepsGraphDialog_build_dep_graph = \u041F\u043E\u0441\u0442\u0440\u043E\u0438\u0442\u044C \u0433\u0440\u0430\u0444 \u0437\u0430\u0432\u0438\u0441\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u0435\u0439 \u0434\u043B\u044F 
 
-BuildDepsGraphDialog_reverse = \u041E\u0431\u0440\u0430\u0442\u043D\u043E\u0435 \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u043E\u0438\u0441\u043A\u0430
+BuildDepsGraphDialog_calls = \u0412\u044B\u0437\u043E\u0432\u044B
+
+BuildDepsGraphDialog_dependencies = \u0417\u0430\u0432\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u0438
 
 BuildDepsGraphDialog_schema_source = \u0418\u0441\u0442\u043E\u0447\u043D\u0438\u043A \u0441\u0445\u0435\u043C\u044B:
 
 BuildDepsGraphDialog_search_dep = \u0413\u043B\u0443\u0431\u0438\u043D\u0430 \u043F\u043E\u0438\u0441\u043A\u0430
+
+BuildDepsGraphDialog_show = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C:
 
 CodeFilter_search_by_code = \u0424\u0438\u043B\u044C\u0442\u0440 \u043F\u043E SQL \u043A\u043E\u0434\u0443 \u043E\u0431\u044A\u0435\u043A\u0442\u0430:
 
