--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -93,7 +93,7 @@ perspective.name.keeper = pgCodeKeeper
 templates.name.sqlEditor = SQL Editor Templates
 
 view.category.name            = pgCodeKeeper
-view.name.DepcyView           = pg Dependencies
+view.name.DepcyView           = Dependency graph
 view.name.ProjectOverrideView = Object overrides
 view.name.ResultSetView       = Query result
 
