PGCK-378: add new object for ms, clickhouse projects

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -543,6 +543,8 @@ NavigatorRootActionProvider_open_action = Open
 
 NavigatorRootLabelProvider_open_editor = pgCodeKeeper Project
 
+NewObjectWizard_create_object = Create object
+
 NewObjectWizard_invalid_input_format = Invalid input format. Expected format: 
 
 NewObjectWizard_invalid_schema_format = Object of this type cannot be created within a schema
@@ -586,6 +588,10 @@ NormalizeProject_normalizing_project = Normalizing project...
 NormalizeProject_project_normalized = Project normalized
 
 NormalizeProject_project_normalized_success = Project normalized successfully!
+
+Object_create_object = Create {0} object
+
+Object_wizard_title = New object
 
 OpenEditor_error_open_project_editor = Cannot open editor on project {0}
 
@@ -643,8 +649,6 @@ PgNavigatorActionProvider_open_with_sql_editor = Open using pgCodeKeeper SQL edi
 
 PgObject_cant_find_projects = No created or opened pgCodeKeeper projects
 
-PgObject_create_object = Create PostgreSQL object
-
 PgObject_empty_name = Please, enter object name
 
 PgObject_file_creation_error = File creation error
@@ -662,8 +666,6 @@ PgObject_select_project = Please, select pgCodeKeeper project
 PgObject_table = TABLE
 
 PgObject_view = VIEW
-
-PgObject_wizard_title = New PostgreSQL object
 
 PgPassDialog_close = Close
 
