--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -544,6 +544,8 @@ NavigatorRootActionProvider_open_action = \u041E\u0442\u043A\u0440\u044B\u0442\u
 
 NavigatorRootLabelProvider_open_editor = \u041F\u0440\u043E\u0435\u043A\u0442 pgCodeKeeper
 
+NewObjectWizard_create_object = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0431\u044A\u0435\u043A\u0442
+
 NewObjectWizard_invalid_input_format = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0432\u0432\u043E\u0434\u0430. \u041E\u0436\u0438\u0434\u0430\u0435\u043C\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442: 
 
 NewObjectWizard_invalid_schema_format = \u041E\u0431\u044A\u0435\u043A\u0442 \u044D\u0442\u043E\u0433\u043E \u0442\u0438\u043F\u0430 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0441\u043E\u0437\u0434\u0430\u043D \u0432\u043D\u0443\u0442\u0440\u0438 \u0441\u0445\u0435\u043C\u044B
@@ -587,6 +589,10 @@ NormalizeProject_normalizing_project = \u041D\u043E\u0440\u043C\u0430\u043B\u043
 NormalizeProject_project_normalized = \u041F\u0440\u043E\u0435\u043A\u0442 \u043D\u043E\u0440\u043C\u0430\u043B\u0438\u0437\u043E\u0432\u0430\u043D...
 
 NormalizeProject_project_normalized_success = \u041F\u0440\u043E\u0435\u043A\u0442 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043D\u043E\u0440\u043C\u0430\u043B\u0438\u0437\u043E\u0432\u0430\u043D!
+
+Object_create_object = \u0421\u043E\u0437\u0434\u0430\u0442\u044C {0} \u043E\u0431\u044A\u0435\u043A\u0442
+
+Object_wizard_title = \u041D\u043E\u0432\u044B\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
 
 OpenEditor_error_open_project_editor = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u043E\u0442\u043A\u0440\u044B\u0442\u0438\u0438 \u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440\u0430 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 {0}
 
@@ -644,8 +650,6 @@ PgNavigatorActionProvider_open_with_sql_editor = \u041E\u0442\u043A\u0440\u044B\
 
 PgObject_cant_find_projects = \u041D\u0435\u0442 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0445 \u0438\u043B\u0438 \u043E\u0442\u043A\u0440\u044B\u0442\u044B\u0445 \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432 pgCodeKeeper
 
-PgObject_create_object = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0431\u044A\u0435\u043A\u0442 PostgreSQL
-
 PgObject_empty_name = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u043E\u0431\u044A\u0435\u043A\u0442\u0430
 
 PgObject_file_creation_error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u0438 \u0444\u0430\u0439\u043B\u0430
@@ -663,8 +667,6 @@ PgObject_select_project = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442
 PgObject_table = \u0422\u0430\u0431\u043B\u0438\u0446\u0430
 
 PgObject_view = \u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u0435
-
-PgObject_wizard_title = \u041D\u043E\u0432\u044B\u0439 \u043E\u0431\u044A\u0435\u043A\u0442 PostgreSQL
 
 PgPassDialog_close = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
 
