PGCK-459 simple pmd

--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -27,6 +27,38 @@ Table_TypeParameterChange = TYPE change - table: {0} original: {1} new: {2}
 
 UnknownDBFormat = Unknown DB format: {0}
 
+VerificationFunctionTreeListener_case_block = Using the case block without the else block is not allowed.
+
+VerificationFunctionTreeListener_quotation_marks = There should be no quotation marks in the table column name.
+
+VerificationFunctionTreeListener_temp_table = Creating only a temporary table is allowed.
+
+VerificationFunction_body_start = Warning: Function body must be start on: {0}.
+
+VerificationFunction_function_length = The length of function {0}. A function should be no longer than {1} strings.
+
+VerificationFunction_function_params = A function have {0} parameters. There should be no more than {1} input parameters.
+
+VerificationFunction_ncss = The method has an NCSS line count {0} expressions. There should be no more than {1} expressions.
+
+VerificationGrant_denied_grant = Error while checking for rights group. Not allowed user for GRANT: 
+
+VerificationIndents_body_start_rule = Warning: Function body must be start on new line and front of him no contains spaces. Remove whitespace and tabs.
+
+VerificationIndents_cyclomatic_complexy = A function\u2019s cyclomatic complexity and nesting includes {0} nestings. There are should be no more than {1}.
+
+VerificationIndents_eol_before_stat = Warning: Not newline before "{0}" keyword.
+
+VerificationIndents_indent_size = Warning: Wrong indent, expected {0} space on each next indent. Here {1} spaces.
+
+VerificationIndents_semicolon_after_simple_sql = Warning: Not semicolon after simple sql statement.
+
+VerificationIndents_space_after_comma = Warning: Not space after comma.
+
+VerificationIndents_space_after_if = Warning: Not space after 'if' keyword.
+
+VerificationIndents_space_math_operators = There must be spaces between math expressions.
+
 XmlStore_read_error = Error while reading XML store: {0}
 
 XmlStore_root_error = XML root element name is not as requested
